# avro-schema-gen

./: Cargo.toml
src/: lib.rs
tests/: basic.rs
