[package]
name = "avro-schema-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.2.1"
proc-macro2 = "1.0.40"
quote = "1.0.20"
serde_json = "1.0.82"
syn = "1.0.98"

[lib]
proc-macro = true
